--- a/web/views/layout.html
+++ b/web/views/layout.html
@@ -1,113 +1,116 @@
-
 <!DOCTYPE html>
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html ng-app="myApp" class="no-js" lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Espio</title>
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Espio</title>
+        <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
+        <link rel="stylesheet" href="/foundation/css/normalize.css" />
+        <link rel="stylesheet" href="/foundation/css/foundation.css" />
 
-    <!-- If you are using CSS version, only link these 2 files, you may add app.css to use for your overrides if you like. -->
-    <link rel="stylesheet" href="/foundation/css/normalize.css" />
-    <link rel="stylesheet" href="/foundation/css/foundation.css" />
+        <script src="/foundation/js/vendor/custom.modernizr.js"></script>
 
-    <script src="/foundation/js/vendor/custom.modernizr.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+    </head>
+    <body>
 
-    <script type='text/javascript' src='/js/app.js'></script>
-    <script type='text/javascript' src='/js/controllers.js'></script>
-    <script type='text/javascript' src='/js/directives.js'></script>
-    <script type='text/javascript' src='/js/filters.js'></script>
-    <script type='text/javascript' src='/js/services.js'></script>
-</head>
-<body>
-
-    <nav class="top-bar">
-        <ul class="title-area">
-            <li class="name">
-                <h1>
-                    <a href="#">
-                        Espio
-                    </a>
-                </h1>
-            </li>
-            <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
-        </ul>
-
-        <section class="top-bar-section">
-            <ul class="right">
-                <li class="divider"></li>
-                <li><a href="/">Home</a></li>
-                <li class="divider"></li>
-                <li><a href="/rawfeed">Feed</a></li>
-                <li class="divider"></li>
-                <li><a href="/settings">Settings</a></li>
-                <li class="divider"></li>
-                <li class="has-dropdown">
-                    <a href="#">Misc</a>
-                    <ul class="dropdown">
-                        <li><label>Section Name</label></li>
-                        <li class="has-dropdown">
-                            <a href="#" class="">Has Dropdown, Level 1</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Dropdown Options</a></li>
-                                <li><a href="#">Dropdown Options</a></li>
-                                <li><a href="#">Level 2</a></li>
-                                <li><a href="#">Subdropdown Option</a></li>
-                                <li><a href="#">Subdropdown Option</a></li>
-                                <li><a href="#">Subdropdown Option</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Dropdown Option</a></li>
-                        <li><a href="#">Dropdown Option</a></li>
-                        <li class="divider"></li>
-                        <li><label>Section Name</label></li>
-                        <li><a href="#">Dropdown Option</a></li>
-                        <li><a href="#">Dropdown Option</a></li>
-                        <li><a href="#">Dropdown Option</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">See all &rarr;</a></li>
-                    </ul>
+        <nav class="top-bar">
+            <ul class="title-area">
+                <li class="name">
+                    <h1>
+                        <a href="#">
+                            Espio
+                        </a>
+                    </h1>
                 </li>
-                <li class="divider"></li>
+                <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
             </ul>
-        </section>
-    </nav>
+
+            <section class="top-bar-section">
+                <ul class="right">
+                    <li class="divider"></li>
+                    <li><a href="/">Home</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/rawfeed">Feed</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/settings">Settings</a></li>
+                    <li class="divider"></li>
+                    <li class="has-dropdown">
+                        <a href="#">Misc</a>
+                        <ul class="dropdown">
+                            <li><label>Section Name</label></li>
+                            <li class="has-dropdown">
+                                <a href="#" class="">Has Dropdown, Level 1</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Dropdown Options</a></li>
+                                    <li><a href="#">Dropdown Options</a></li>
+                                    <li><a href="#">Level 2</a></li>
+                                    <li><a href="#">Subdropdown Option</a></li>
+                                    <li><a href="#">Subdropdown Option</a></li>
+                                    <li><a href="#">Subdropdown Option</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Dropdown Option</a></li>
+                            <li><a href="#">Dropdown Option</a></li>
+                            <li class="divider"></li>
+                            <li><label>Section Name</label></li>
+                            <li><a href="#">Dropdown Option</a></li>
+                            <li><a href="#">Dropdown Option</a></li>
+                            <li><a href="#">Dropdown Option</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">See all &rarr;</a></li>
+                        </ul>
+                    </li>
+                    <li class="divider"></li>
+                </ul>
+            </section>
+        </nav>
 
 
-    <div class='row'>
-        <div class='large-12 columns'>
-            {% block body %}
-            <h1>Espio</h1>
-            <h4 style='margin-top:-20px;' class='subheader'>import agent; agent.spy()</h4>
-            {% endblock %}
+        <div class='row'>
+            <div class='large-12 columns'>
+                {% block body %}
+                <h1>Espio</h1>
+                <h4 style='margin-top:-20px;' class='subheader'>import agent; agent.spy()</h4>
+                {% endblock %}
+            </div>
         </div>
-    </div>
 
-    <script>
-    document.write('<script src=' +
-    ('__proto__' in {} ? '/foundation/js/vendor/zepto' : '/foundation/js/vendor/jquery') +
-    '.js><\/script>')
-    </script>
-    <script src="/foundation/js/foundation/foundation.js"></script>
-    <script src="/foundation/js/foundation/foundation.alerts.js"></script>
-    <script src="/foundation/js/foundation/foundation.clearing.js"></script>
-    <script src="/foundation/js/foundation/foundation.cookie.js"></script>
-    <script src="/foundation/js/foundation/foundation.dropdown.js"></script>
-    <script src="/foundation/js/foundation/foundation.forms.js"></script>
-    <script src="/foundation/js/foundation/foundation.joyride.js"></script>
-    <script src="/foundation/js/foundation/foundation.magellan.js"></script>
-    <script src="/foundation/js/foundation/foundation.orbit.js"></script>
-    <script src="/foundation/js/foundation/foundation.placeholder.js"></script>
-    <script src="/foundation/js/foundation/foundation.reveal.js"></script>
-    <script src="/foundation/js/foundation/foundation.section.js"></script>
-    <script src="/foundation/js/foundation/foundation.tooltips.js"></script>
-    <script src="/foundation/js/foundation/foundation.topbar.js"></script>
-    <script src="/foundation/js/foundation/foundation.interchange.js"></script>
-    <script>
-    $(document).foundation();
-    </script>
-</body>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+
+        <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+        <script src="https://cdn.firebase.com/libs/angularfire/0.3.0/angularfire.js"></script>
+
+        <script type='text/javascript' src='/js/app.js'></script>
+        <script type='text/javascript' src='/js/controllers.js'></script>
+        <script type='text/javascript' src='/js/directives.js'></script>
+        <script type='text/javascript' src='/js/filters.js'></script>
+        <script type='text/javascript' src='/js/services.js'></script>
+
+
+        <script>
+        document.write('<script src=' +
+        ('__proto__' in {} ? '/foundation/js/vendor/zepto' : '/foundation/js/vendor/jquery') +
+        '.js><\/script>')
+        </script>
+        <script src="/foundation/js/foundation/foundation.js"></script>
+        <script src="/foundation/js/foundation/foundation.alerts.js"></script>
+        <script src="/foundation/js/foundation/foundation.clearing.js"></script>
+        <script src="/foundation/js/foundation/foundation.cookie.js"></script>
+        <script src="/foundation/js/foundation/foundation.dropdown.js"></script>
+        <script src="/foundation/js/foundation/foundation.forms.js"></script>
+        <script src="/foundation/js/foundation/foundation.joyride.js"></script>
+        <script src="/foundation/js/foundation/foundation.magellan.js"></script>
+        <script src="/foundation/js/foundation/foundation.orbit.js"></script>
+        <script src="/foundation/js/foundation/foundation.placeholder.js"></script>
+        <script src="/foundation/js/foundation/foundation.reveal.js"></script>
+        <script src="/foundation/js/foundation/foundation.section.js"></script>
+        <script src="/foundation/js/foundation/foundation.tooltips.js"></script>
+        <script src="/foundation/js/foundation/foundation.topbar.js"></script>
+        <script src="/foundation/js/foundation/foundation.interchange.js"></script>
+        <script>
+        $(document).foundation();
+        </script>
+    </body>
 </html>
